<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Q3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q3" />

    <Button
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q3A1" />

    <Button
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q3A2" />

    <Button
        android:id="@+id/name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q3A3" />

    <Button
        android:id="@+id/name4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q3A4" />
</LinearLayout>