<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/QuizTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/QTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="367dp"
        app:srcCompat="@drawable/wfilstudio" />

    <TextView
        android:id="@+id/Q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q1" />

    <Button
        android:id="@+id/Q1A1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q1A1" />

    <Button
        android:id="@+id/Q1A2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q1A2" />

</LinearLayout>