<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quiz.q2">

    <TextView
        android:id="@+id/q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/q2A1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q2A1"
        app:layout_constraintTop_toBottomOf="@+id/q"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/q2A2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q2A2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2A1" />

    <Button
        android:id="@+id/q2A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q2A3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2A2" />

    <Button
        android:id="@+id/q2A4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q2A4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q2A3" />

</androidx.constraintlayout.widget.ConstraintLayout>