<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/q5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q5" />

    <Button
        android:id="@+id/Q5A2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q5A2" />

    <Button
        android:id="@+id/Q5A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Q5A3" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="308dp"
        app:srcCompat="@drawable/phillytribune" />
</LinearLayout>